[gd_scene load_steps=11 format=3 uid="uid://nt0txomcjfv8"]

[ext_resource type="Material" uid="uid://chhjn3dnmn284" path="res://object_material.tres" id="1_81hmj"]
[ext_resource type="Script" path="res://world.gd" id="1_bi6wr"]
[ext_resource type="Shader" path="res://fullscreen.gdshader" id="1_hm4uy"]
[ext_resource type="Script" path="res://CameraRotate.gd" id="2_uwrh6"]
[ext_resource type="Script" path="res://LightRotate.gd" id="5_6fo1r"]

[sub_resource type="BoxMesh" id="BoxMesh_ows3s"]

[sub_resource type="SphereMesh" id="SphereMesh_l53eg"]

[sub_resource type="BoxMesh" id="BoxMesh_wtsxf"]

[sub_resource type="QuadMesh" id="QuadMesh_umjkw"]
flip_faces = true
size = Vector2(2, 2)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_5fwrm"]
render_priority = 0
shader = ExtResource("1_hm4uy")
shader_parameter/noise_scale = 0.05
shader_parameter/noise_strength = 0.002
shader_parameter/light_position = Vector3(10, 15, 15)
shader_parameter/line_density_vertical = 1000.0
shader_parameter/line_density_horizontal = 500.0
shader_parameter/line_density_diagonal = 500.0

[node name="World" type="Node3D"]
script = ExtResource("1_bi6wr")

[node name="LightRotate" type="Node3D" parent="."]
transform = Transform3D(0.999739, 0, 0.0228269, 0, 1, 0, -0.0228269, 0, 0.999739, 0, 0, 0)
script = ExtResource("5_6fo1r")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="LightRotate"]
transform = Transform3D(-0.866023, -0.433016, 0.250001, 0, 0.499998, 0.866027, -0.500003, 0.749999, -0.43301, 10, 15, 15)

[node name="Ground" type="MeshInstance3D" parent="."]
transform = Transform3D(18.5803, 0, 7.40077, 0, 0.1, 0, -7.40077, 0, 18.5803, 0, 0, 0)
mesh = SubResource("BoxMesh_ows3s")
surface_material_override/0 = ExtResource("1_81hmj")

[node name="Sphere" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.42711, 1.09127, -1.63049)
mesh = SubResource("SphereMesh_l53eg")
surface_material_override/0 = ExtResource("1_81hmj")

[node name="Cube" type="MeshInstance3D" parent="."]
transform = Transform3D(-0.342389, 0.825314, 0.449027, 0.519107, 0.564515, -0.641756, -0.783133, 0.013362, -0.621711, 0, 1.1472, 0)
mesh = SubResource("BoxMesh_wtsxf")
surface_material_override/0 = ExtResource("1_81hmj")

[node name="Wall" type="Node3D" parent="."]

[node name="Cube2" type="MeshInstance3D" parent="Wall"]
transform = Transform3D(2, 0, 0, 0, 1, 0, 0, 0, 1, -2.414, 0.5, -3.992)
mesh = SubResource("BoxMesh_wtsxf")
skeleton = NodePath("../..")
surface_material_override/0 = ExtResource("1_81hmj")

[node name="Cube3" type="MeshInstance3D" parent="Wall"]
transform = Transform3D(2, 0, 0, 0, 1, 0, 0, 0, 1, -0.265544, 0.5, -3.992)
mesh = SubResource("BoxMesh_wtsxf")
skeleton = NodePath("../..")
surface_material_override/0 = ExtResource("1_81hmj")

[node name="Cube4" type="MeshInstance3D" parent="Wall"]
transform = Transform3D(1.99658, 0, -0.0584875, 0, 1, 0, 0.116975, 0, 0.998288, 1.82046, 0.5, -3.992)
mesh = SubResource("BoxMesh_wtsxf")
skeleton = NodePath("../..")
surface_material_override/0 = ExtResource("1_81hmj")

[node name="Cube5" type="MeshInstance3D" parent="Wall"]
transform = Transform3D(2, 0, 0, 0, 1, 0, 0, 0, 1, 3.91394, 0.5, -3.992)
mesh = SubResource("BoxMesh_wtsxf")
skeleton = NodePath("../..")
surface_material_override/0 = ExtResource("1_81hmj")

[node name="Cube6" type="MeshInstance3D" parent="Wall"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.0013, 1.54433, -3.992)
mesh = SubResource("BoxMesh_wtsxf")
skeleton = NodePath("../..")
surface_material_override/0 = ExtResource("1_81hmj")

[node name="Cube10" type="MeshInstance3D" parent="Wall"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.41509, 1.54433, -3.992)
mesh = SubResource("BoxMesh_wtsxf")
skeleton = NodePath("../..")
surface_material_override/0 = ExtResource("1_81hmj")

[node name="Cube7" type="MeshInstance3D" parent="Wall"]
transform = Transform3D(1.99908, 0, 0.030364, 0, 1, 0, -0.060728, 0, 0.999539, -1.35068, 1.54433, -3.992)
mesh = SubResource("BoxMesh_wtsxf")
skeleton = NodePath("../..")
surface_material_override/0 = ExtResource("1_81hmj")

[node name="Cube8" type="MeshInstance3D" parent="Wall"]
transform = Transform3D(1.99971, 0, -0.0170859, 0, 1, 0, 0.0341719, 0, 0.999854, 0.707349, 1.54433, -4.0243)
mesh = SubResource("BoxMesh_wtsxf")
skeleton = NodePath("../..")
surface_material_override/0 = ExtResource("1_81hmj")

[node name="Cube9" type="MeshInstance3D" parent="Wall"]
transform = Transform3D(2, 0, 0.0020245, 0, 1, 0, -0.0040492, 0, 0.999999, 2.77544, 1.54433, -3.992)
mesh = SubResource("BoxMesh_wtsxf")
skeleton = NodePath("../..")
surface_material_override/0 = ExtResource("1_81hmj")

[node name="Wall2" type="Node3D" parent="."]
transform = Transform3D(-0.0844083, 0, 0.996431, 0, 1, 0, -0.996431, 0, -0.0844083, 0, 0, 0)

[node name="Cube2" type="MeshInstance3D" parent="Wall2"]
transform = Transform3D(2, 0, 0, 0, 1, 0, 0, 0, 1, -2.414, 0.5, -3.992)
mesh = SubResource("BoxMesh_wtsxf")
skeleton = NodePath("../..")
surface_material_override/0 = ExtResource("1_81hmj")

[node name="Cube3" type="MeshInstance3D" parent="Wall2"]
transform = Transform3D(2, 0, 0, 0, 1, 0, 0, 0, 1, -0.265544, 0.5, -3.992)
mesh = SubResource("BoxMesh_wtsxf")
skeleton = NodePath("../..")
surface_material_override/0 = ExtResource("1_81hmj")

[node name="Cube4" type="MeshInstance3D" parent="Wall2"]
transform = Transform3D(1.99658, 0, -0.0584875, 0, 1, 0, 0.116975, 0, 0.998288, 1.82046, 0.5, -3.992)
mesh = SubResource("BoxMesh_wtsxf")
skeleton = NodePath("../..")
surface_material_override/0 = ExtResource("1_81hmj")

[node name="Cube5" type="MeshInstance3D" parent="Wall2"]
transform = Transform3D(2, 0, 0, 0, 1, 0, 0, 0, 1, 3.91394, 0.5, -3.992)
mesh = SubResource("BoxMesh_wtsxf")
skeleton = NodePath("../..")
surface_material_override/0 = ExtResource("1_81hmj")

[node name="Cube6" type="MeshInstance3D" parent="Wall2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.0013, 1.54433, -3.992)
mesh = SubResource("BoxMesh_wtsxf")
skeleton = NodePath("../..")
surface_material_override/0 = ExtResource("1_81hmj")

[node name="Cube10" type="MeshInstance3D" parent="Wall2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.41509, 1.54433, -3.992)
mesh = SubResource("BoxMesh_wtsxf")
skeleton = NodePath("../..")
surface_material_override/0 = ExtResource("1_81hmj")

[node name="Cube7" type="MeshInstance3D" parent="Wall2"]
transform = Transform3D(1.99908, 0, 0.030364, 0, 1, 0, -0.060728, 0, 0.999539, -1.35068, 1.54433, -3.992)
mesh = SubResource("BoxMesh_wtsxf")
skeleton = NodePath("../..")
surface_material_override/0 = ExtResource("1_81hmj")

[node name="Cube8" type="MeshInstance3D" parent="Wall2"]
transform = Transform3D(1.99971, 0, -0.0170859, 0, 1, 0, 0.0341719, 0, 0.999854, 0.707349, 1.54433, -4.0243)
mesh = SubResource("BoxMesh_wtsxf")
skeleton = NodePath("../..")
surface_material_override/0 = ExtResource("1_81hmj")

[node name="Cube9" type="MeshInstance3D" parent="Wall2"]
transform = Transform3D(2, 0, 0.0020245, 0, 1, 0, -0.0040492, 0, 0.999999, 2.77544, 1.54433, -3.992)
mesh = SubResource("BoxMesh_wtsxf")
skeleton = NodePath("../..")
surface_material_override/0 = ExtResource("1_81hmj")

[node name="CameraRotate" type="Node3D" parent="."]
script = ExtResource("2_uwrh6")

[node name="Camera3D" type="Camera3D" parent="CameraRotate"]
transform = Transform3D(0.634636, -0.248514, 0.731763, 0, 0.946885, 0.321572, -0.772811, -0.204081, 0.600928, 4.96456, 5.75328, 4.02389)
near = 1.0
far = 100.0

[node name="FullscreenQuad" type="MeshInstance3D" parent="CameraRotate/Camera3D"]
transform = Transform3D(0.999999, -1.19209e-07, 3.57628e-07, -4.47035e-08, 0.999999, -2.38419e-07, 1.49012e-07, -6.70552e-08, 1, 0, 0, 0)
extra_cull_margin = 16384.0
mesh = SubResource("QuadMesh_umjkw")
skeleton = NodePath("")
surface_material_override/0 = SubResource("ShaderMaterial_5fwrm")
